--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,70 @@
 alembic==0.9.9
+aniso8601==3.0.0
 autoenv==1.0.0
+awscli==1.11.161
+Babel==2.5.0
+botocore==1.7.19
 click==6.7
+colorama==0.3.7
+decorator==4.0.6
+docutils==0.14
+ecdsa==0.13
+elasticsearch==5.2.0
+et-xmlfile==1.0.1
 Flask==1.0.2
+flask-marshmallow==0.9.0
 Flask-Migrate==2.1.1
+Flask-RESTful==0.3.6
+Flask-Script==2.0.6
 Flask-SQLAlchemy==2.3.2
+futures==3.1.1
+guppy==0.1.10
+i18n==0.2
+ipython==2.4.1
 itsdangerous==0.24
+jdcal==1.3
 Jinja2==2.10
+jmespath==0.9.3
+lxml==3.8.0
+Magic-file-extensions==0.2
 Mako==1.0.7
 MarkupSafe==1.0
+marshmallow==2.15.3
+marshmallow-jsonapi==0.19.0.post0
+marshmallow-sqlalchemy==0.14.0
+mysql-connector-python==2.0.4
+mysql-utilities==1.6.1
+numpy==1.13.0
+olefile==0.44
+openpyxl==2.4.8
+pandas==0.20.0
+paramiko==1.16.0
+pexpect==4.0.1
+progressbar==2.3
+progressbar2==3.10.1
 psycopg2==2.7.4
+ptyprocess==0.5
+py==1.4.34
+pyasn1==0.3.6
+pycrypto==2.6.1
+PyPDF2==1.26.0
 python-dateutil==2.7.3
 python-editor==1.0.3
+python-i18n==0.3.1
+python-utils==2.2.0
+pytz==2017.2
+PyYAML==3.12
+redis==2.10.6
+rsa==3.4.2
+s3cmd==1.6.1
+s3transfer==0.1.11
+simplegeneric==0.8.1
 six==1.11.0
+speedtest-cli==1.0.7
 SQLAlchemy==1.2.8
+urllib3==1.22
+vboxapi==1.0
+virtualenv==16.0.0
 Werkzeug==0.14.1
+xlrd==1.1.0
+XlsxWriter==0.8.4
